# pact-hx

./: GITHUB_STRUCTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
docs/deployment/: API_SPECIFICATION.md  AWS_ARCHITECTURE.md  AWS_DEPLOYMENT_CHECKLIST.md  AWS_DEPLOYMENT_PLAN.md  REAL_SIMPLE_PLAN.md  sqllite.md
examples/: README.md
examples/basic_chat/: app.py
examples/enhanced_chat/: app.py
examples/integration_demos/: README.md  basic_pact_demo.py  demo.html  engagement_tracker.js
frontend/: teacher_dashboard.html
frontend/shared/: analytics_charts.js  notification_system.js  websocket_client.js
frontend/student_interface/: learning_components.js
integration/: creative_synthesis_api.py
integration_engine/: README.md  integration_engine.js  package.json  server-minimal.js  server.js
integration_engine/clients/: creative_synthesis_client.js
integration_engine/components/: component_registry.js  data_coordinator.js  pact_orchestrator.js  session_manager.js
integration_engine/config/: default.json
integration_engine/routes/: adaptations.js  analytics.js  sessions.js  students.js
integration_engine/utils/: logger.js  validation.js
pact_hx/: __init__.py  version.py
pact_hx/core/: base_primitive.py
pact_hx/expression/: base.py  customer_care.py  mental_health.py  orchestrator.py  voice_ai.py
primitives/memory/: using_ax_substrate.md
server/: README.md  manual_test.py  quick_test.py  requirements.txt
server/src/: database.py  main.py  models.py
server/tests/: test_api.py  (+1 more)
tests/: conftest.py
(+23 files in other folders)
